--- a/src/app/modules/companies/components/recent-reviews/recent-reviews-page.component.html
+++ b/src/app/modules/companies/components/recent-reviews/recent-reviews-page.component.html
@@ -22,93 +22,11 @@
           </button>
         </div>
         <div class="mb-2">
-          <button
-            class="btn btn-link h5 text-dark total-rating-link"
-            type="button"
-            data-bs-toggle="collapse"
-            [attr.data-bs-target]="'#collapseExample-' + item.id"
-            aria-expanded="false"
-            [attr.aria-controls]="'collapseExample-' + item.id"
-          >
-            <span class="h5">{{ item.totalRating | number: "1.2-2" }}</span>
-            <i class="ms-2 bi bi-caret-down-fill"></i>
-          </button>
-          <div class="ms-2 d-inline-block">
-            <app-star-rating-readonly
-              [source]="item.totalRating"
-            ></app-star-rating-readonly>
-          </div>
-
-          <div class="collapse" id="collapseExample-{{ item.id }}">
-            <div class="card card-body small">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="mb-2">
-                    <span>Культура и ценности</span>
-                    <app-star-rating-readonly
-                      [source]="item.cultureAndValues"
-                    ></app-star-rating-readonly>
-                  </div>
-
-                  <div *ngIf="item.codeQuality" class="mb-2">
-                    <span>Качество кода</span>
-                    <app-star-rating-readonly
-                      [source]="item.codeQuality"
-                    ></app-star-rating-readonly>
-                  </div>
-
-                  <div class="mb-2">
-                    <span>Work / Life баланс</span>
-                    <span>
-                      <app-star-rating-readonly
-                        [source]="item.workLifeBalance"
-                      ></app-star-rating-readonly>
-                    </span>
-                  </div>
-                </div>
-
-                <div class="col-md-6">
-                  <div class="mb-2">
-                    <span>Компенсация и бонусы</span>
-                    <app-star-rating-readonly
-                      [source]="item.compensationAndBenefits"
-                    ></app-star-rating-readonly>
-                  </div>
-
-                  <div class="mb-2">
-                    <span>Карьерные возможности</span>
-                    <app-star-rating-readonly
-                      [source]="item.careerOpportunities"
-                    ></app-star-rating-readonly>
-                  </div>
-
-                  <div class="mb-2">
-                    <span>Менеджмент</span>
-                    <app-star-rating-readonly
-                      [source]="item.management"
-                    ></app-star-rating-readonly>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div *ngIf="item.pros" class="mb-2">
-          <div class="fw-bold text-success">Плюсы:</div>
-          <div [innerHTML]="item.pros"></div>
-        </div>
-        <div *ngIf="item.cons" class="mb-2">
-          <div class="fw-bold text-danger">Минусы:</div>
-          <div [innerHTML]="item.cons"></div>
-        </div>
-
-        <div class="text-muted fst-italic">
-          <i class="bi bi-check-circle-fill me-1"></i>
-          <span>{{ item.createdAt | date: "dd.MM.yyyy" }}</span>
-          <span class="ms-3"
-            >(<app-time-ago [date]="item.createdAt"></app-time-ago>)</span
-          >
+          <app-company-review-block
+            [review]="item"
+            (like)="likeClicked(item)"
+            (dislike)="dislikeClicked(item)"
+          ></app-company-review-block>
         </div>
       </div>
     </div>
