--- a/src/app/modules/companies/components/recent-reviews/recent-reviews-page.component.html
+++ b/src/app/modules/companies/components/recent-reviews/recent-reviews-page.component.html
@@ -24,6 +24,7 @@
         <div class="mb-2">
           <app-company-review-block
             [review]="item"
+            [showVoteButtons]="isAuthenticated"
             (like)="likeClicked(item)"
             (dislike)="dislikeClicked(item)"
           ></app-company-review-block>
