--- a/src/app/shared/components/vote-buttons/vote-buttons.component.html
+++ b/src/app/shared/components/vote-buttons/vote-buttons.component.html
@@ -1,4 +1,8 @@
-<div class="d-flex gap-3" [ngClass]="{ disabled: disabled }">
+<div
+  class="d-flex gap-3"
+  [ngClass]="{ disabled: disabled }"
+  [title]="containerTitle"
+>
   <i
     class="bi"
     [ngClass]="{
