--- a/src/app/modules/companies/components/company-page/company-page.component.html
+++ b/src/app/modules/companies/components/company-page/company-page.component.html
@@ -91,6 +91,7 @@
             [showVoteButtons]="isAuthenticated"
             (like)="likeClicked(review)"
             (dislike)="dislikeClicked(review)"
+            (clickWhileDisabledForAnonymous)="clickWhileDisabledForAnonymous()"
           ></app-company-review-block>
         </div>
 
