--- a/src/app/modules/companies/components/company-review-block/company-review-block.component.html
+++ b/src/app/modules/companies/components/company-review-block/company-review-block.component.html
@@ -103,6 +103,9 @@
               [disabled]="!showVoteButtons"
               (voteUp)="likeClicked()"
               (voteDown)="dislikeCliked()"
+              (clickWhileDisabledForAnonymous)="
+                clickWhileDisabledForAnonymousClick()
+              "
             ></app-vote-buttons>
           </div>
         </div>
