--- a/src/app/modules/companies/components/recent-reviews/recent-reviews-page.component.html
+++ b/src/app/modules/companies/components/recent-reviews/recent-reviews-page.component.html
@@ -27,6 +27,7 @@
             [showVoteButtons]="isAuthenticated"
             (like)="likeClicked(item)"
             (dislike)="dislikeClicked(item)"
+            (clickWhileDisabledForAnonymous)="clickWhileDisabledForAnonymous()"
           ></app-company-review-block>
         </div>
       </div>
