--- a/src/app/modules/admin/components/telegram/stat-data-change-subscriptions/stat-data-cache-records.component.html
+++ b/src/app/modules/admin/components/telegram/stat-data-change-subscriptions/stat-data-cache-records.component.html
@@ -21,6 +21,7 @@
               <th>Специальности</th>
               <th>No pushes</th>
               <th>AI анализ</th>
+              <th>Регулярность</th>
               <th>Последнее сообщение</th>
               <th>Создано</th>
               <th>Обновлено</th>
@@ -47,6 +48,7 @@
                   [defaultFailTitle]="'Нет'"
                 ></app-status-label>
               </td>
+              <td>{{ getRegularityTitle(item.regularity) }}</td>
               <td>{{ item.lastMessageSent | date: "yyyy-MM-dd HH:mm" }}</td>
               <td>{{ item.createdAt | date: "yyyy-MM-dd HH:mm" }}</td>
               <td>{{ item.updatedAt | date: "yyyy-MM-dd HH:mm" }}</td>
@@ -76,6 +78,11 @@
                         class="dropdown-item text-warning"
                         (click)="deactivate(item)"
                         >Деактивировать</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" (click)="openEditDlg(item)"
+                        >Редактировать</a
                       >
                     </li>
                     <li>
@@ -134,20 +141,20 @@
 </ng-template>
 
 <app-dialog
-  [show]="!!createForm"
-  (closed)="onCreateModalDlgClose()"
+  [show]="!!editForm"
+  (closed)="onEditModalDlgClose()"
   [header]="'Новая подписка'"
 >
   <form
     class="mb-5"
-    *ngIf="!!createForm"
-    [formGroup]="createForm"
-    (ngSubmit)="onCreateFormSubmit()"
+    *ngIf="!!editForm"
+    [formGroup]="editForm"
+    (ngSubmit)="onEditFormSubmit()"
   >
     <div class="mb-3">
       <label>Имя подписки</label>
       <input type="text" class="form-control" formControlName="name" />
-      <app-field-error [field]="createForm.get('name')"></app-field-error>
+      <app-field-error [field]="editForm.get('name')"></app-field-error>
     </div>
 
     <div class="mb-3">
@@ -158,7 +165,7 @@
         formControlName="telegramChatId"
       />
       <app-field-error
-        [field]="createForm.get('telegramChatId')"
+        [field]="editForm.get('telegramChatId')"
       ></app-field-error>
     </div>
 
@@ -166,7 +173,33 @@
       <label>Специальности (через запятую)</label>
       <input type="text" class="form-control" formControlName="professionIds" />
       <app-field-error
-        [field]="createForm.get('professionIds')"
+        [field]="editForm.get('professionIds')"
+      ></app-field-error>
+    </div>
+
+    <div class="mb-3">
+      <div>
+        <label>Регулярность</label>
+        <select class="form-control" formControlName="regularity">
+          <option value="1">Еженедельно</option>
+          <option value="2">Ежемесячно</option>
+        </select>
+      </div>
+      <div>
+        <app-field-error [field]="editForm.get('regularity')"></app-field-error>
+      </div>
+    </div>
+
+    <div class="mb-3">
+      <label for="useAiAnalysis">Использовать AI анализ</label>
+      <input
+        type="checkbox"
+        id="useAiAnalysis"
+        class="form-check-input"
+        formControlName="useAiAnalysis"
+      />
+      <app-field-error
+        [field]="editForm.get('useAiAnalysis')"
       ></app-field-error>
     </div>
 
@@ -181,7 +214,7 @@
         Не отправлять сообщение, если нет изменений</label
       >
       <app-field-error
-        [field]="createForm.get('preventNotificationIfNoDifference')"
+        [field]="editForm.get('preventNotificationIfNoDifference')"
       ></app-field-error>
     </div>
 
