--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -1,22 +1,70 @@
 <app-page-header>О проекте</app-page-header>
 
 <div class="container">
-  <div class="card">
+  <div class="card mb-5">
     <div class="card-body p-5">
-      <div class="fs-4">
-        <div class="fw-light">Автор:</div>
+      <div class="mb-3 h1">Миссия портала</div>
+      <div class="mb-3">
+        Миссия портала заключается в том, чтобы способствовать развитию
+        открытости и прозрачности в IT-сфере Казахстана. Для этого мы собираем и
+        показываем статистику по зарплатам в индустрии с 2024 года и в 2025 году
+        запустили раздел с отзывами о компании.
+      </div>
+      <div class="mb-3">
+        Наш проект &mdash; некоммерческий и в свободном доступе. Так будет
+        всегда.
+      </div>
+      <div class="mb-5">
         <div>
+          <span>Автор проекта</span> &mdash;
           <a
-            class="text-reset link-without-underline"
+            class="text-reset link-without-underline h5"
             href="https://mgorbatyuk.dev"
             target="_blank"
             >Максим Горбатюк</a
           >
         </div>
+        <div class="mt-3">
+          <span
+            >Если у вас есть вопрос по проекту, то смело пишите мне в
+            телеграмм:</span
+          >
+          <a
+            class="text-reset link-without-underline ms-2"
+            href="https://t.me/maximgorbatyuk"
+            target="_blank"
+            ><i class="me-1 bi bi-telegram"></i> maximgorbatyuk</a
+          >
+        </div>
       </div>
 
-      <div class="my-5">
-        <div class="mb-2 h3">Контрибьюторы</div>
+      <div class="">
+        <div class="h3">СМИ о нас</div>
+        <div class="mt-3">
+          <a
+            class="fst-italic"
+            href="https://digitalbusiness.kz/2024-03-12/almatinets-sozdal-servis-dlya-sbora-dannih-o-zarplatah-kazahstanskih-aytishnikov/"
+            target="_blank"
+          >
+            Алматинец создал сервис для сбора информации о зарплатах
+            казахстанских айтишников</a
+          >, Digital Business, 13 марта 2024
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card mb-5">
+    <div class="card-body p-5">
+      <div class="mb-3 h1">Контрибьюторы</div>
+
+      <div class="mb-2">
+        Ниже перечислены все люди, кто помог проекту стать лучше: кто-то кодом,
+        кто-то идеей, кто-то - иллюстрациями и стикерами. Спасибо вам всем за
+        помощь!
+      </div>
+
+      <div class="mb-5">
         <div *ngFor="let item of contributors">
           <a
             class="text-reset link-without-underline"
@@ -27,12 +75,12 @@
         </div>
       </div>
 
-      <div class="my-5">
+      <div class="">
         <div class="h3">Иллюстрации и стикеры</div>
         <div class="mt-3">
           <span class="me-2">Иллюстрации:</span>
           <a
-            class="text-reset link-without-underline"
+            class="link-without-underline fw-bold"
             href="https://www.behance.net/just_juliette"
             target="_blank"
             >Юлия Левданская</a
@@ -41,30 +89,20 @@
         <div>
           <span class="me-2">Стикеры:</span>
           <a
-            class="text-reset link-without-underline"
+            class="link-without-underline fw-bold"
             href="https://www.instagram.com/_jakoja_/"
             target="_blank"
             >Jakoja (Жансая)</a
           >
         </div>
       </div>
+    </div>
+  </div>
 
-      <div class="my-5">
-        <div class="h3">СМИ о нас</div>
-        <div class="mt-3">
-          <a
-            class="text-reset link-without-underline fst-italic"
-            href="https://digitalbusiness.kz/2024-03-12/almatinets-sozdal-servis-dlya-sbora-dannih-o-zarplatah-kazahstanskih-aytishnikov/"
-            target="_blank"
-          >
-            Алматинец создал сервис для сбора информации о зарплатах
-            казахстанских айтишников </a
-          >, Digital Business, 13 марта 2024
-        </div>
-      </div>
-
-      <div class="my-5">
-        <div class="h3">История проекта</div>
+  <div class="card mb-5">
+    <div class="card-body p-5">
+      <div class="mb-3">
+        <div class="h1">История проекта</div>
         <div class="mt-3">
           Меня зовут Максим, я разработчик из Алматы. Изначально я создавал
           платформу для ведения заметок во время технических интервью в далеком
@@ -123,7 +161,7 @@
         </div>
       </div>
 
-      <div class="my-5">
+      <div class="mt-5">
         <div class="h3">Концепция</div>
         <div class="mt-3">
           Концепция проекта: данные в обмен на данные - пользователь оставляет
@@ -177,9 +215,13 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
 
-      <div class="my-5">
-        <div class="h3">Солидному проекту &mdash; свой маскот</div>
+  <div class="card mb-5">
+    <div class="card-body p-5">
+      <div class="">
+        <div class="h1">Солидному проекту &mdash; свой маскот</div>
         <div class="mt-3">
           <div class="mb-2">
             Так как проект был разработан еще в 2021 году, тогда же я взял
@@ -251,64 +293,84 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
 
-      <div class="my-5">
-        <div class="h3">Стикеры</div>
-        <div class="mt-3">
-          <span class="me-1"
-            ><a
-              href="https://t.me/addstickers/TechinterviewSpaceCats"
-              target="_blank"
-              >Стикеры</a
-            >
-            сделаны замечательной художницей</span
-          >
-          <a
-            class="text-reset link-without-underline fw-bold"
-            href="https://www.instagram.com/_jakoja_/"
+  <div class="card mb-5">
+    <div class="card-body p-5">
+      <div class="h1">Стикеры</div>
+      <div class="mt-3">
+        В 2025 году были созданы
+        <span class="me-1"
+          ><a
+            href="https://t.me/addstickers/TechinterviewSpaceCats"
             target="_blank"
+            >стикеры</a
           >
-            Jakoja (Жансая)
-          </a>
-        </div>
-        <div class="mt-2 row row-cols-4">
-          <div *ngFor="let sticker of stickerImages" class="col p-3">
-            <img
-              [src]="sticker"
-              class="p-2 img-fluid rounded increasable-on-hover"
-            />
-          </div>
+          для телеграма были сделаны замечательной художницей</span
+        >
+        <a
+          class="text-reset link-without-underline fw-bold"
+          href="https://www.instagram.com/_jakoja_/"
+          target="_blank"
+        >
+          Jakoja (Жансая)
+        </a>
+      </div>
+      <div class="mt-3">
+        Работа с Жансаей была очень приятной. Она сделала все очень быстро и
+        качественно. Если вы хотите поддержать проект, то я буду рад, если вы
+        добавите эти стикеры себе в телеграм и будете их использовать.
+      </div>
+      <div class="mt-2 row row-cols-4">
+        <div *ngFor="let sticker of stickerImages" class="col p-3">
+          <img
+            [src]="sticker"
+            class="p-2 img-fluid rounded increasable-on-hover"
+          />
         </div>
       </div>
+    </div>
+  </div>
 
-      <div class="my-5">
-        <div class="h3">Технологии</div>
-        <div class="mt-3">
-          <div>Frontend: Angular</div>
-          <div>Backend: .NET</div>
-          <div>База данных: PostgreSQL</div>
-          <div>Хостинг: DigitalOcean</div>
-        </div>
+  <div class="card mb-5">
+    <div class="card-body p-5">
+      <div class="h1">Технологии</div>
+      <div class="mt-3">
+        <div>Frontend: Angular</div>
+        <div>Backend: .NET</div>
+        <div>База данных: PostgreSQL</div>
+        <div>Хостинг: DigitalOcean</div>
+      </div>
 
-        <hr class="mt-5" />
-        <div class="mt-3">
-          <span><i class="bi bi-geo"></i></span>
-          <span class="ms-3">Алматы, Казахстан</span>
+      <hr class="mt-5" />
+      <div class="mt-3">
+        <span><i class="bi bi-geo"></i></span>
+        <span class="ms-3">Алматы, Казахстан</span>
+      </div>
+      <div class="mt-1">
+        <span><i class="bi bi-github"></i></span>
+        <span class="ms-3">
+          <a
+            class="text-reset link-without-underline"
+            href="https://github.com/orgs/Techinterview-space/repositories"
+            target="_blank"
+            >Github репозитории</a
+          >
+        </span>
+
+        <div class="mt-1">
+          <span><i class="bi bi-telegram"></i></span>
+          <a
+            class="text-reset link-without-underline ms-3"
+            href="https://t.me/maximgorbatyuk"
+            target="_blank"
+            >&#64;maximgorbatyuk</a
+          >
         </div>
         <div class="mt-1">
-          <span><i class="bi bi-github"></i></span>
-          <span class="ms-3">
-            <a
-              class="text-reset link-without-underline"
-              href="https://github.com/orgs/Techinterview-space/repositories"
-              target="_blank"
-              >Github репозитории</a
-            >
-          </span>
-          <div class="mt-1">
-            <span><i class="bi bi-envelope"></i></span>
-            <span class="ms-3">ake111aa&#64;yandex.ru</span>
-          </div>
+          <span><i class="bi bi-envelope"></i></span>
+          <span class="ms-3">ake111aa&#64;yandex.ru</span>
         </div>
       </div>
     </div>
