--- a/src/app/modules/home/components/not-authorized-error/not-authorized-error.component.html
+++ b/src/app/modules/home/components/not-authorized-error/not-authorized-error.component.html
@@ -2,6 +2,8 @@
   <div class="mt-3 d-flex flex-column">
     <div class="display-1 text-danger text-center">401</div>
 
-    <div class="h1 text-center">You should authorize first</div>
+    <div class="h1 text-center">
+      Необходимо авторизоваться. Кнопка находится в навигации.
+    </div>
   </div>
 </div>
