--- a/src/app/modules/home/components/server-unavailable/server-unavailable.component.html
+++ b/src/app/modules/home/components/server-unavailable/server-unavailable.component.html
@@ -2,7 +2,25 @@
   <div class="mt-3 d-flex flex-column">
     <div class="display-1 text-danger text-center">Server Unavailable</div>
 
-    <div class="h1 text-center">Don't panic, we are solving this issue</div>
-    <div class="display-2 text-center">¯\_(ツ)_/¯</div>
+    <div class="mt-5 card card-body p-5">
+      <div class="h3 text-center">
+        Не паникуйте, мы работаем над этой проблемой
+      </div>
+      <div class="mt-3 display-2 text-center">¯\_(ツ)_/¯</div>
+
+      <div class="mt-5 text-center">
+        <div class="h3 text-muted">
+          На всякий случай, напишите, пожалуйста, в телеграм автору проекта:
+        </div>
+        <div class="mt-3">
+          <a
+            href="https://t.me/maximgorbatyuk"
+            target="_blank"
+            class="btn btn-lg w-50 btn-outline-dark py-2"
+            >Телеграм &#64;maximgorbatyuk</a
+          >
+        </div>
+      </div>
+    </div>
   </div>
 </div>
