--- a/src/app/modules/admin/components/companies/company-admin-page/company-admin-page.component.html
+++ b/src/app/modules/admin/components/companies/company-admin-page/company-admin-page.component.html
@@ -236,7 +236,7 @@
               <td>{{ reviewToShow.workLifeBalance ?? "-" }}</td>
             </tr>
             <tr>
-              <td>Компенсация и льготы</td>
+              <td>Зарплата и бонусы</td>
               <td>{{ reviewToShow.compensationAndBenefits ?? "-" }}</td>
             </tr>
             <tr>
