--- a/src/app/modules/companies/components/add-review-page/add-review-page.component.html
+++ b/src/app/modules/companies/components/add-review-page/add-review-page.component.html
@@ -119,7 +119,7 @@
             <div class="col-md-6">
               <div class="mb-5">
                 <label class="fw-bold text-dark"
-                  >Компенсация и бенефиты *</label
+                  >Зарплата и бонусы *</label
                 >
                 <app-star-rating
                   [maxValue]="5"
@@ -132,7 +132,7 @@
                   {{ editForm.getStarRating("compensationAndBenefits") }}
                 </div>
                 <div class="text-muted small">
-                  Насколько компенсация соответствует требованиям.
+                  Насколько компенсация (зарплата и бонусы) соответствует требованиям.
                 </div>
                 <app-field-error
                   [field]="editForm.get('compensationAndBenefits')"
