--- a/src/app/modules/companies/components/company-review-block/company-review-block.component.html
+++ b/src/app/modules/companies/components/company-review-block/company-review-block.component.html
@@ -47,7 +47,7 @@
 
           <div class="col-md-6">
             <div class="mb-2">
-              <span>Компенсация и бонусы</span>
+              <span>Зарплата и бонусы</span>
               <app-star-rating-readonly
                 [source]="review.compensationAndBenefits"
               ></app-star-rating-readonly>
