--- a/src/app/modules/admin/components/admin-start-page/admin-start-page.component.html
+++ b/src/app/modules/admin/components/admin-start-page/admin-start-page.component.html
@@ -36,5 +36,41 @@
         </div>
       </div>
     </div>
+
+    <div class="col-md-4 mb-3">
+      <div class="card card-body p-3">
+        <div class="h5">Емейлов отправлено</div>
+        <div class="mt-1">
+          <app-items-per-day-chart
+            [source]="dashboardData.userEmailsForLastDays"
+            [datasetTitle]="'Тренд данных за 10 дней'"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4 mb-3">
+      <div class="card card-body p-3">
+        <div class="h5">Лайков на отзывы</div>
+        <div class="mt-1">
+          <app-items-per-day-chart
+            [source]="dashboardData.reviewLikesForLastTenDays"
+            [datasetTitle]="'Тренд данных за 10 дней'"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4 mb-3">
+      <div class="card card-body p-3">
+        <div class="h5">Отзывов оставлено</div>
+        <div class="mt-1">
+          <app-items-per-day-chart
+            [source]="dashboardData.reviewsForLastTenDays"
+            [datasetTitle]="'Тренд данных за 10 дней'"
+          />
+        </div>
+      </div>
+    </div>
   </div>
 </div>
