--- a/src/app/modules/home/components/not-authorized-error/not-authorized-error.component.html
+++ b/src/app/modules/home/components/not-authorized-error/not-authorized-error.component.html
@@ -1,9 +1,3 @@
-<div class="container">
-  <div class="mt-3 d-flex flex-column">
-    <div class="display-1 text-danger text-center">401</div>
-
-    <div class="h1 text-center">
-      Необходимо авторизоваться. Кнопка находится в навигации.
-    </div>
-  </div>
-</div>
+<app-error-page-component [errorTitle]="'Ошибка 401'">
+  <div class="h1">Необходимо авторизоваться. Кнопка находится в навигации.</div>
+</app-error-page-component>
