--- a/src/app/modules/home/components/not-found-error/not-found-error.component.html
+++ b/src/app/modules/home/components/not-found-error/not-found-error.component.html
@@ -1,14 +1,7 @@
-<div class="container">
-  <div class="mt-3 d-flex flex-column">
-    <div class="display-1 text-danger text-center">404</div>
+<app-error-page-component [errorTitle]="'Ошибка 404'">
+  <div class="h1">Упс! Страница или ресурс не найдены</div>
 
-    <div class="mt-5 card card-body p-5">
-      <div class="h1 text-center">Упс! Страница не найдена</div>
-      <div class="mt-3 display-2 text-center">¯\_(ツ)_/¯</div>
-
-      <div class="mt-5 text-center">
-        <a href="/" class="btn btn-lg w-50 btn-outline-dark py-2">На главную</a>
-      </div>
-    </div>
+  <div class="mt-5">
+    <a routerLink="/" class="btn btn-outline-dark px-3">На главную</a>
   </div>
-</div>
+</app-error-page-component>
