--- a/src/app/modules/home/components/unsubscribe-me/unsubscribe-me.component.html
+++ b/src/app/modules/home/components/unsubscribe-me/unsubscribe-me.component.html
@@ -1,16 +1,15 @@
-<div class="container">
-  <div class="mt-3 d-flex flex-column">
-    <div class="display-1">Вы отписались от рассылок</div>
+<app-error-page-component
+  [errorTitle]="'Вы отписались от рассылок'"
+  [errorTitleCss]="''"
+>
+  <div class="">
+    <div class="subtitle">
+      <div>Жаль, что вы отказались от любых рассылок нашего сервиса.</div>
+      <div>Если вы передумаете, будем рады вас снова видеть.</div>
+    </div>
 
-    <div class="mt-5 card card-body p-5">
-      <div class="subtitle">
-        <div>Жаль, что вы отказались от любых рассылок нашего сервиса.</div>
-        <div>Если вы передумаете, будем рады вас снова видеть.</div>
-      </div>
-
-      <div class="mt-5 text-center">
-        <a href="/" class="btn btn-lg w-50 btn-primary py-3">На главную</a>
-      </div>
+    <div class="mt-3">
+      <a href="/" class="btn btn-lg btn-outline-dark px-3">На главную</a>
     </div>
   </div>
-</div>
+</app-error-page-component>
